# trello-clone

./: .env.example  .gitignore  .markdownlint.yaml  README.md  alembic.ini  pyproject.toml
.github/instructions/: coding-style-python.instructions.md
.github/workflows/: cd.yml  ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/architecture/: DIAGRAM_RENDERING.md  FAQ.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  README.md  REVIEW_CHECKLIST.md  TABLE_OF_CONTENTS.md  api-design.md  bounded-contexts.md  caching.md  capacity-planning.md  components.md  data-flows.md  data-partitioning.md  database-optimization.md  glossary.md  layers.md  migration-guide.md  navigation.md  performance.md  quickstart.md  scalability.md  technology-choices.md
docs/architecture/decisions/: adr-001-clean-architecture.md
docs/architecture/deployment/: ci-cd-pipeline.md  container-architecture.md  disaster-recovery.md  ecs-deployment.md  environments.md  infrastructure-as-code.md
docs/architecture/diagrams/: 01-system-overview.md
docs/architecture/observability/: alerting.md  dashboards.md  incident-response.md  logging.md  metrics.md  tracing.md
docs/architecture/observability/runbooks/: README.md
docs/architecture/security/: README.md  audit-logging.md  authentication.md  authorization.md  data-protection.md  defense-in-depth.md  owasp-compliance.md
specs/001-system-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-system-architecture/checklists/: requirements.md
specs/001-system-architecture/contracts/: adr-001-clean-architecture.md  adr-002-technology-stack.md  adr-003-bounded-contexts.md
specs/001-system-architecture/diagrams/: system-architecture.md
src/: __init__.py  main.py
src/domain/audit/: repositories.py
src/domain/notifications/: repositories.py
src/domain/projects/: repositories.py
src/domain/tasks/: repositories.py
src/domain/users/: repositories.py
src/interface/api/v1/: dependencies.py  middleware.py
src/shared/config/: settings.py
tests/: conftest.py
